# ideal-succotash

./: README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pythonpackage.yaml
examples/mortality_cmip5/: README.md  clean_cmip5.py  clean_gamma.py  clean_segment_weights.py  mortality.py  mortality_chicago.py  mortality_projection_dev.py
src/ideal_succotash/mortality/: projection.py  transformation.py
tests/mortality/: test_projection.py  test_transformation.py  test_yellow_purple_comparison.py
