[project]
name = "ideal-succotash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "muuttaa>=0.1.1",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "xarray[accel,io,parallel]>=2025.11.0",
    "xhistogram>=0.3.2",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "xarray[types]>=2025.11.0",
]

[tool.ruff]
extend-exclude = ["examples/mortality_cmip5"]

