[project]
name = "ideal-succotash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5netcdf>=1.7.3",
    "isku>=0.3.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "xarray[accel,io,parallel]>=2026.4.0",
    "xclim>=0.61.1",
    "xhistogram>=0.3.2",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "xarray[types]>=2026.4.0",
]

[tool.ruff]
extend-exclude = ["examples/mortality_cmip5"]

